# timeoff-to-calendar

./: .editorconfig  .gitignore  CLAUDE.md  NuGet.config  README.md  names.json  pytest.ini
.github/workflows/: publish.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
allowlists/: gvp-all.json  whos-out.json  will.json
public/: .feeds.json  gvp-all.ics  gvp-will.ics
specs/001-filter-ics-people/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-filter-ics-people/checklists/: requirements.md
specs/001-filter-ics-people/contracts/: allowlist.schema.json  cli.md  config.md  output-ics.md
specs/002-multi-ics-feeds/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-multi-ics-feeds/checklists/: requirements.md
src/dotnet/FilterIcs/: Allowlist.cs  (+9 more)
src/python/: pyproject.toml
src/python/filter_ics/: __init__.py  allowlist.py  cli.py  feeds.py  fetch.py  filter.py  manifest.py  naming.py  render.py
tests/dotnet/: AllowlistObjectTests.cs  AllowlistTests.cs  FeedsTests.cs  FilterIcs.Tests.csproj  FilterTests.cs  Fixture.cs  NameExtractionTests.cs  NamingTests.cs
tests/fixtures/: source.ics
tests/python/: test_allowlist_behavior.py  test_allowlist_object.py  test_allowlist_safety.py  test_cli_end_to_end.py  test_feeds_isolation.py  test_feeds_multi.py  test_feeds_removal.py  test_filter.py  test_name_extraction.py  test_naming.py
(+5 files in other folders)
