[project]
name = "filter-ics"
version = "0.1.0"
description = "Filter a time-off .ics feed down to an allowlist of people."
requires-python = ">=3.12"
dependencies = [
    "icalendar>=5.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
filter-ics = "filter_ics.cli:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["filter_ics*"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
